charts/aoa/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: ingress-argocd
  namespace: argocd
  argocd.argoproj.io/sync-wave: "10"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.zdrux.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.zdrux.com
    secretName: argocd-certs-tls
